new modues added

--- a/.env
+++ b/.env
@@ -11,4 +11,7 @@ AZURE_OPENAI_EMB_ENDPOINT=
 AZURE_OPENAI_EMB_API_KEY=
 AZURE_OPENAI_EMB_API_VERSION=2023-05-15
 
+VECTOR_ENABLED=true
+VECTOR_SIMILARITY_THRESHOLD=0.75
+AZURE_OPENAI_EMBEDDING_DIMENSION=1536
 
