--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,14 @@ dependencies = [
     "openai (>=1.71.0,<2.0.0)",
     "dash (>=3.0.2,<4.0.0)",
     "plotly (>=6.0.1,<7.0.0)",
-    "json-repair (>=0.40.0,<0.41.0)",
+    "json-repair (>=0.39.1,<0.40.0)",
     "pydantic (>=2.11.2,<3.0.0)",
     "torch (>=2.6.0,<3.0.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "spacy (>=3.8.5,<4.0.0)",
-    "langchain-community (>=0.3.21,<0.4.0)"
+    "langchain-community (>=0.3.21,<0.4.0)",
+    "scipy (>=1.15.2,<2.0.0)",
+    "langchain-neo4j (>=0.4.0,<0.5.0)"
    
 ]
 
