--- a/.env
+++ b/.env
@@ -18,4 +18,6 @@ AZURE_OPENAI_EMBEDDING_DIMENSION=1536
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=12345678
-NEO4J_DATABASE=herplloveu
+NEO4J_DATABASE=kgagentdb
+
+INITIAL_SCHEMA_PATH= test_data\medical_schema.json
